# msot

./: .gitmodules  CMakeLists.txt  README.md  README_EN.md  build.py  dependencies.json  download_dependencies.py  requirements.txt
.gitcode/: PULL_REQUEST_TEMPLATE.zh-CN.md
cmake/module/: msdebug.cmake  mskl.cmake  mskpp.cmake  msopgen.cmake  msopprof.cmake  mssanitizer.cmake
cmake/script/: repair_mskpp_wheel.sh
docs/design/: MindStudio 7.0.RC3 算子调试软件实现设计说明书.md  MindStudio 8.0.RC1 算子设计(mskpp)功能域设计说明书.md  MindStudio 8.0.RC1 算子调试(msdebug)功能域设计说明书.md  MindStudio 8.2.0 算子设计组件实现设计说明书.md  异常检测工具检测规则.md
docs/design/26.1.0/检测工具功能设计文档/: 算子检测工具功能设计文档.md
docs/design/检测工具模块设计文档/: 异常检测软件实现设计说明书 8.2.0.md  设计图.md
docs/design/检测工具模块设计文档/assets/: CANN软件栈检测.eddx  LoadNBytes.eddx  host侧内存信息H2D传递协议.eddx  kernel侧堆管理示意图.eddx  代码调用栈查询时序图.eddx  内存检测.eddx  内存检测流程.eddx  动态调用算子first_tiling_key解析.eddx  动态调用算子二进制上报流程.eddx  在线检测影子内存三层表结构.eddx  指令间竞争.eddx  核间硬同步.eddx  核间软同步.eddx  模块设计.eddx  流水内同步.eddx  竞争.eddx  竞争2.eddx  竞争检测算法实现.eddx  竞争检测算法模块设计.eddx  竞争风险.eddx  调用栈模块关系.eddx  调用栈解析.eddx  静态调用算子二进制上报流程.eddx
docs/design/调优工具模块设计文档/: MindStudio 8.3.0 算子调优组件实现设计说明书.md
docs/design/调试工具功能设计文档/: 调试工具功能设计文档.md
docs/design/调试工具模块设计文档/: MindStudio 8.3.0 算子调试组件实现设计说明书.md
docs/en/common/: dev_env_setup.md
docs/en/install_guide/: msot_install_guide.md
docs/en/legal/: security_statement.md  vulnerability_handling_procedure.md
docs/en/overview/: overview.md
docs/en/quick_start/: cann_container_setup.md  installation_guide.md  op_tool_quick_start.md
docs/en/release_notes/: release_notes.md
docs/mskl_cases/: 基于mskpp拉起msopgen工程.md
docs/sanitizer_cases/: 【检测】DETR网络整网精度问题定位案例.md  【检测】TensorMove算子越界写踩踏OnesLike算子导致精度异常案例.md  【检测】【XX客户】flash_attention_train 算子UB越界写导致算子挂掉问题定位案例.md  【检测】【XX客户】lora_a 精度异常问题定位案例.md  【检测】稀疏矩阵MatmulCustom算子运行报错并且精度异常问题定位案例.md  【检测】量化算子colrowstats越界读写导致精度问题和程序异常中断定位案例.md
docs/zh/: msot_install_guide.md
docs/zh/common/: contribute_workflow.md  dev_env_setup.md  disclaimer.md  license_notice.md
docs/zh/contributing/: contributing_guide.md
docs/zh/install_guide/: msot_install_guide.md
docs/zh/legal/: security_statement.md
docs/zh/overview/: overview.md
docs/zh/quick_start/: cann_container_setup.md  get_chip_soc_type.md  installation_guide.md  op_tool_quick_start.md
docs/zh/release_notes/: release_notes.md
docs/zh/user_guide/: msot_user_guide.md
example/StepByStep/OperatorSample/: .gitignore  README.md
example/StepByStep/OperatorSample/cross_entrpy/: README.md  make.sh
example/StepByStep/OperatorSample/cross_entrpy/step1/: cross_entropy.cpp
example/StepByStep/OperatorSample/cross_entrpy/step2_fix_ub_align/: cross_entropy.cpp
example/StepByStep/OperatorSample/cross_entrpy/step3_fix_data_copy/: cross_entropy.cpp  sample_cross_entrpy.py
example/StepByStep/OperatorSample/cross_entrpy/step4_fix_sync/: cross_entropy.cpp
example/StepByStep/OperatorSample/cross_entrpy/step5_fix_set_value/: cross_entropy.cpp  sample_cross_entrpy.py
example/StepByStep/OperatorSample/cross_entrpy/step6_optim_scalar_calc/: cross_entropy.cpp
example/StepByStep/OperatorSample/cross_entrpy/step7_optim_mov/: cross_entropy.cpp  sample_cross_entrpy.py
example/StepByStep/OperatorSample/cross_entrpy/step8_optim_sync/: cross_entropy.cpp  sample_cross_entrpy.py
example/StepByStep/OperatorSample/utils/: config.h  data_utils.h  kernel_utils.h
example/StepByStep/docs/: step-1 算子原型定义和golden数据生成.md  step-2_1 AicoreError问题：mssanitizer和msdebug定位aicore error问题.md  step-2_2 精度问题：msdebug定位DataCopy问题.md  step-2_3 精度问题：mssanitizer定位算子同步问题.md  step-2_4 精度问题：msdebug定位SetValue问题.md  step-2_5 精度问题：mssanitizer定位尾块未计算问题.md  step-3_1 性能问题：msprof op定位当前算子性能瓶颈.md
example/quick_start/msdebug/: set_kernel_obj_env.sh
example/quick_start/mskpp/: mskpp_demo.py
example/quick_start/msopgen/: keep_soc_info.py  msopgen_demo.json
example/quick_start/msopgen/caller/: CMakeLists.txt  exec.py  main.cpp  run.sh
example/quick_start/msopgen/code/op_host/: add_custom.cpp  add_custom_tiling.h
example/quick_start/msopgen/code/op_kernel/: add_custom.cpp
example/quick_start/mssanitizer/bug_code/: add_custom.cpp
example/quick_start/public/: ctr_in.py  get_ai_soc_version.py  requirements.txt
package/conf/: filelist.xml  version.info
package/script/: common.sh  install.sh  parser.py
